# apollonia

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  codecov.yml  docker-compose.postgres.yml  docker-compose.yml  e2e-results.xml  justfile  pr-body.md  pyproject.toml  pytest.ini
.github/: TROUBLESHOOTING.md  dependabot.yml
.github/actions/publish-test-results/: action.yml
.github/actions/security-scan/: action.yml
.github/actions/setup-frontend-env/: action.yml
.github/actions/setup-python-env/: action.yml
.github/actions/upload-coverage/: action.yml
.github/actions/wait-for-services/: action.yml
.github/scripts/: README.md  cancel-old-workflows.sh  health-check.sh
.github/workflows/: README.md  benchmarks.yml  build.yml  ci.yml  dependencies.yml  deploy.yml  docker.yml  quality.yml  test.yml
analyzer/: Dockerfile  README.md  __init__.py  analyzer.py  analyzer_enhanced.py  cache.py  ml_features.py  model_management.py  models.py  processors.py  pyproject.toml
analyzer/ml/: __init__.py  extractors.py  pipelines.py  real_models.py  real_pipelines.py
api/: .ruff.toml  Dockerfile  README.md  __init__.py  config.py  database.py  main.py  pyproject.toml
api/endpoints/: auth.py  catalog.py  health.py  media.py  search.py
api/graphql/: resolvers.py  schema.py  types.py
api/middleware/: logging.py  metrics.py
api/schemas/: catalog.py  media.py  search.py
api/utils/: cache.py  emoji.py  logging.py
benchmarks/: README.md  __init__.py  conftest.py  test_hash_performance.py  test_message_processing.py  test_neo4j_operations.py
config/: performance.yaml
database/: __init__.py  config.py  create_migration.sh  models.py  pyproject.toml
database/alembic/: env.py
database/alembic/versions/: 20250726_152419-c718b8951b71_initial_media_catalog_schema.py
docs/: PHASE3_SUMMARY.md  getting-started.md
docs/api/: README.md  api-reference.md
docs/architecture/: overview.md
docs/development/: composite-actions.md  development-guide.md  documentation-updates-summary.md  emoji-logging-quick-reference.md  github-workflows.md  justfile-guide.md  logging-convention.md  media-catalog-implementation-plan.md  python-version-notes.md  roadmap.md  testing.md
docs/operations/: configuration.md  deployment-guide.md  docker-deployment.md  monitoring.md  performance.md
docs/services/: analyzer.md  api.md  ingestor.md  populator.md
frontend/: .eslintignore  .eslintrc.json  .prettierignore  Dockerfile  README.md  app.css  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.eslint.json  tsconfig.json  vite.config.ts
frontend/coverage/: index.html  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/src/: index.html  main.tsx.html  router.tsx.html
frontend/coverage/lcov-report/src/components/layouts/: ProtectedLayout.tsx.html  RootLayout.tsx.html  index.html
frontend/coverage/lcov-report/src/components/ui/: Navbar.tsx.html  (+2 more)
frontend/coverage/lcov-report/src/pages/: AnalyticsPage.tsx.html  CatalogsPage.tsx.html  HomePage.tsx.html  LoginPage.tsx.html  SettingsPage.tsx.html  UploadPage.tsx.html  index.html
frontend/coverage/lcov-report/src/services/: api.ts.html  apollo.ts.html  index.html
frontend/coverage/lcov-report/src/stores/: authStore.ts.html  index.html
frontend/coverage/lcov-report/src/utils/: format.ts.html  index.html
frontend/coverage/src/: index.html  main.tsx.html  router.tsx.html
frontend/coverage/src/components/layouts/: ProtectedLayout.tsx.html  RootLayout.tsx.html  index.html
frontend/coverage/src/components/ui/: Navbar.tsx.html  Sidebar.tsx.html  index.html
frontend/coverage/src/pages/: AnalyticsPage.tsx.html  CatalogsPage.tsx.html  HomePage.tsx.html  LoginPage.tsx.html  SettingsPage.tsx.html  UploadPage.tsx.html  index.html
frontend/coverage/src/services/: api.ts.html  apollo.ts.html  index.html
frontend/coverage/src/stores/: authStore.ts.html  index.html
frontend/coverage/src/utils/: format.ts.html  index.html
frontend/src/: main.tsx  router.tsx
frontend/src/components/layouts/: ProtectedLayout.tsx  RootLayout.tsx
frontend/src/components/ui/: Navbar.test.tsx  Navbar.tsx  Sidebar.test.tsx  Sidebar.tsx
frontend/src/pages/: AnalyticsPage.tsx  CatalogDetailPage.tsx  CatalogsPage.tsx  HomePage.test.tsx  HomePage.tsx  LoginPage.test.tsx  LoginPage.tsx  MediaDetailPage.tsx  NotFoundPage.tsx  RegisterPage.tsx  SearchPage.tsx  SettingsPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts  apollo.ts
frontend/src/stores/: authStore.ts
frontend/src/styles/: globals.css
frontend/src/test/: matchers.ts  mocks.ts  performance.ts  setup.ts  utils.tsx
frontend/src/types/: catalog.ts  index.ts  media.ts
frontend/src/utils/: format.test.ts  format.ts
ingestor/: Dockerfile  Dockerfile.media  __init__.py  __main__.py  entrypoint.sh  ingestor.py  media_ingestor.py  media_prospector.py  media_utils.py  prospector.py  pyproject.toml  requirements.txt
populator/: Dockerfile  __init__.py  populator.py  pyproject.toml
scripts/: README.md  update-project.sh
shared/: README.md  __init__.py  logging_utils.py  models.py  pyproject.toml
stubs/: asyncinotify.pyi
tests/: README.md  __init__.py  conftest.py  fixtures.py
tests/analyzer/: __init__.py  test_analyzer.py
tests/api/: conftest.py  test_api.py  test_endpoints.py  test_graphql.py  test_utils.py
tests/e2e/: __init__.py  conftest.py  test_docker_e2e.py  test_e2e.py  test_frontend_e2e.py  test_full_flow.py  test_health_checks.py  test_placeholder.py
tests/fixtures/: sample_files.py
tests/ingestor/: __init__.py  test_ingestor.py  test_prospector.py
tests/integration/: __init__.py  test_amqp_integration.py  test_end_to_end.py  test_ingestor_integration.py  test_neo4j_integration.py  test_placeholder.py  test_populator_integration.py
tests/populator/: __init__.py  test_populator.py
tests/unit/: __init__.py  test_api.py  test_ingestor.py  test_placeholder.py  test_populator.py
