[project]
name = "apollonia"
version = "0.1.0"
description = "File monitoring and processing system with AMQP message queuing"
authors = [
    { name = "Robert Wlodarczyk", email = "robert@simplicityguy.com" }
]
readme = "README.md"
# Using Python 3.12 for TensorFlow compatibility
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Runtime dependencies for all services
dependencies = [
    # Import core dependencies needed for testing the services
    "asyncinotify>=4.2.1",
    "orjson>=3.9.0",
    "pika>=1.3.0",
    "xxhash>=3.5.0",
    "aio-pika>=9.4.0",
    "neo4j>=5.19.0",
    # Media processing dependencies
    "essentia-tensorflow>=2.1b6.dev1110",
    "numpy>=1.26.0",
    "tensorflow>=2.15.0",
    "librosa>=0.10.0",
    "moviepy>=1.0.3",
    # Database dependencies
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    # API dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "strawberry-graphql[fastapi]>=0.217.0",
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/SimplicityGuy/apollonia"
Repository = "https://github.com/SimplicityGuy/apollonia"
Issues = "https://github.com/SimplicityGuy/apollonia/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "taskipy>=1.12.0",
    "pre-commit>=3.7.0",
    "types-pyyaml>=6.0.0",
]

# Testing dependencies (for CI)
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
]

# Integration testing
integration = [
    "docker>=7.0.0",
    "neo4j>=5.19.0",
    "aio-pika>=9.4.0",
    "pika>=1.3.0",
]

# All dependencies combined
all = [
    "apollonia[dev,test,integration]",
]

[tool.uv]
# uv-specific configuration
dev-dependencies = [
    # Include all development dependencies
    "apollonia[dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestor", "populator", "analyzer"]

[tool.taskipy.tasks]
# Development setup tasks
setup = "uv sync --all-extras"
dev = "uv sync --extra dev && uv run pre-commit install"

# Code quality tasks
format = "uv run ruff format ."
lint = "uv run ruff check . --fix"
typecheck = "uv run mypy ."

# Testing tasks
test = "uv run pytest -v --cov=ingestor --cov=populator --cov-report=term-missing"
test-watch = "uv run pytest-watch -v"
test-integration = "uv run pytest -v -m integration"
test-e2e = "uv run pytest -v -m e2e"

# Comprehensive quality checks
check = "uv run task lint && uv run task typecheck && uv run task test"
check-all = "uv run pre-commit run --all-files && uv run task check"

# Service tasks
ingestor = "uv run python -m ingestor.ingestor"
media-ingestor = "uv run python -m ingestor.media_ingestor"
populator = "uv run python -m populator.populator"
analyzer = "uv run python -m analyzer.analyzer"

# Build tasks
build = "uv build"
build-docker = "docker compose build"
build-services = "cd ingestor && uv build && cd ../populator && uv build"

# Cleanup tasks
clean = "rm -rf dist/ build/ *.egg-info .coverage .pytest_cache .mypy_cache .ruff_cache"
clean-all = "uv run task clean && docker system prune -f"

# Pre-commit tasks
install-hooks = "uv run pre-commit install"
update-hooks = "uv run pre-commit autoupdate"

# Development workflow
install = "uv sync --all-extras && uv run task install-hooks"
ci = "uv run task check-all"

# Database tasks
db-up = "docker compose up -d postgres redis"
db-migrate = "alembic upgrade head"
db-downgrade = "alembic downgrade -1"
db-revision = "alembic revision --autogenerate"

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "COM",    # flake8-commas
    "PTH",    # flake8-use-pathlib
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
]
ignore = [
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"tests/e2e/*" = ["S101", "S603", "S607"]  # Allow subprocess in E2E tests

[tool.ruff.lint.isort]
known-first-party = ["ingestor", "populator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
pretty = true
allow_untyped_calls = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "aiofiles"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
    "e2e: marks tests as end-to-end tests (deselect with '-m not e2e')",
]

[tool.coverage.run]
source = ["ingestor", "populator"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
