[project]
name = "apollonia-analyzer"
version = "0.1.0"
description = "ML analysis service for media files"
requires-python = ">=3.13"

dependencies = [
    "aio-pika>=9.4.0",
    "orjson>=3.9.0",
    "numpy>=1.26.0",
    # ML dependencies - TensorFlow not yet available for Python 3.13
    # "essentia-tensorflow>=2.1b6.dev1110",
    # "tensorflow>=2.15.0",
    # For now, we'll mock the ML functionality
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
