[project]
name = "apollonia-analyzer"
version = "0.1.0"
description = "ML analysis service for media files"
requires-python = ">=3.12,<3.13"

dependencies = [
    "aio-pika>=9.4.0",
    "orjson>=3.9.0",
    "numpy>=1.26.0",
    # ML dependencies
    "tensorflow>=2.15.0",
    "librosa>=0.10.0",
    "moviepy>=1.0.3",
    "scikit-learn>=1.3.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "aiofiles>=24.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# x86_64 only dependencies
x86_64 = [
    "essentia-tensorflow>=2.1b6.dev1110",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
