[project]
name = "apollonia-analyzer"
version = "0.1.0"
description = "ML analysis service for media files"
authors = [
    { name = "Robert Wlodarczyk", email = "robert@simplicityguy.com" }
]
readme = "README.md"
requires-python = "~=3.12.0"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aio-pika>=9.4.0",
    "aiofiles>=24.1.0",
    "asyncpg>=0.29.0",
    "essentia-tensorflow>=2.1b6.dev1110",
    "httpx>=0.25.0",
    "librosa>=0.10.0",
    "moviepy>=1.0.3",
    "numpy>=1.26.0",
    "orjson>=3.9.0",
    "redis>=5.0.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/SimplicityGuy/apollonia"
Repository = "https://github.com/SimplicityGuy/apollonia"
Issues = "https://github.com/SimplicityGuy/apollonia/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
