[project]
name = "apollonia-database"
version = "0.1.0"
description = "Database models and migrations for Apollonia"
requires-python = "~=3.12.0"

dependencies = [
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
