[project]
name = "apollonia-ingestor"
version = "0.1.0"
description = "File monitoring service for Apollonia - watches directories and publishes file metadata to AMQP"
authors = [
    { name = "Robert Wlodarczyk", email = "robert@simplicityguy.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncinotify>=4.0.0",
    "orjson>=3.9.0",
    "pika>=1.3.0",
    "xxhash>=3.4.0",
]

[project.scripts]
apollonia-ingestor = "ingestor.ingestor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
