[project]
name = "apollonia-ingestor"
version = "0.1.0"
description = "File monitoring service for Apollonia - watches directories and publishes file metadata to AMQP"
authors = [
    { name = "Robert Wlodarczyk", email = "robert@simplicityguy.com" }
]
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "asyncinotify>=4.0.0",
    "orjson>=3.9.0",
    "pika>=1.3.0",
    "xxhash>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
apollonia-ingestor = "ingestor.ingestor:main"

[project.urls]
Homepage = "https://github.com/SimplicityGuy/apollonia"
Repository = "https://github.com/SimplicityGuy/apollonia"
Issues = "https://github.com/SimplicityGuy/apollonia/issues"
Documentation = "https://github.com/SimplicityGuy/apollonia/tree/main/docs/services"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Tool configurations for service-specific development
[tool.ruff]
target-version = "py312"
line-length = 100
extend-include = ["*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "PTH", "SIM", "ASYNC", "S"]
ignore = ["S101"]  # Allow assert in this service

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["../tests/ingestor"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
