[project]
name = "apollonia-ingestor"
version = "0.1.0"
description = "File monitoring service for Apollonia - watches directories and publishes file metadata to AMQP"
authors = [
    { name = "Robert Wlodarczyk", email = "robert@simplicityguy.com" }
]
requires-python = "~=3.12.0"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "orjson>=3.9.0",
    "pika>=1.3.0",
    "watchdog>=6.0.0",
    "xxhash>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
]


[project.urls]
Homepage = "https://github.com/SimplicityGuy/apollonia"
Repository = "https://github.com/SimplicityGuy/apollonia"
Issues = "https://github.com/SimplicityGuy/apollonia/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-include = ["*.py"]

[tool.ruff.lint]
select = ["ARG", "ASYNC", "B", "C4", "E", "F", "I", "PTH", "S", "SIM", "UP", "W"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["../tests/ingestor"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
