[project]
name = "apollonia-populator"
version = "0.1.0"
description = "Message consumer service for Apollonia - processes file metadata and imports to Neo4j"
authors = [
    { name = "Robert Wlodarczyk", email = "robert@simplicityguy.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.4.0",
    "neo4j>=5.19.0",
    "orjson>=3.9.0",
]

[project.scripts]
apollonia-populator = "populator.populator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
