[project]
name = "apollonia-populator"
version = "0.1.0"
description = "Message consumer service for Apollonia - processes file metadata and imports to Neo4j"
authors = [
    { name = "Robert Wlodarczyk", email = "robert@simplicityguy.com" }
]
requires-python = "~=3.12.0"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "aio-pika>=9.4.0",
    "neo4j>=5.19.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
]

[project.scripts]
apollonia-populator = "populator:main"

[project.urls]
Homepage = "https://github.com/SimplicityGuy/apollonia"
Repository = "https://github.com/SimplicityGuy/apollonia"
Issues = "https://github.com/SimplicityGuy/apollonia/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-include = ["*.py"]

[tool.ruff.lint]
select = ["ARG", "ASYNC", "B", "C4", "E", "F", "I", "PTH", "S", "SIM", "UP", "W"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["../tests/populator"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
